# molt-tv

./: .gitignore  AGENTS.md  HANDOFF.md  README.md  architecture.md
backend/: .env  .env.example  beat_ticker.py  bot.py  chat_bridge.py  failure_retrieval.py  game_processors.py  game_session.py  game_state.py  gb_api.py  pyproject.toml  seed_demo.py  smoke_game_session.py  transcript_recorder.py
backend/app/: config.py
backend/app/agent/: mode_parser.py  prompts.py
backend/app/dashboard/templates/: index.html
backend/app/eval/: cekura_client.py
backend/app/memory/: failure_store.py  tagger.py
backend/app/services/: embed.py
backend/data/: moltstreamer.db
backend/prompts/: streamer_system.md  streamer_task.md
molt-broadcast/: package-lock.json  package.json
molt-broadcast/src/main/: daily-api.js  index.js  preload.js
molt-broadcast/src/renderer/: index.html  renderer.js  styles.css
molt-harness/: .env.example  agenda.md  agenda.py  bot.py  main.py  pyproject.toml
