[project]
name = "moltstreamer"
version = "0.1.0"
description = "Self-Improving AI Twitch Streamer playing Gradient Bang"
requires-python = ">=3.11"
dependencies = [
    "pipecat-ai[daily,gradium,openai,runner,silero,webrtc,websocket]>=1.3.0",
    "pipecatcloud>=0.7.1",
    "aiohttp>=3.9",
    "boto3>=1.34",
    "faiss-cpu>=1.8",
    "numpy>=1.26",
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
]

[dependency-groups]
dev = [
    "pyright>=1.1.404,<2",
    "ruff>=0.12.11,<1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I", "UP"]