[project]
name = "molt-harness"
version = "0.1.0"
description = "Playwright harness + Pipecat voice agent for molt-tv"
requires-python = ">=3.11"
dependencies = [
    "pipecat-ai[daily,openai,cartesia]>=1.3.0",
    "playwright>=1.44",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "loguru>=0.7",
]
